# zaps_vim

./: CMakeLists.txt  Cargo.toml  README.md  build.rs  build.sh  mingw-toolchain.cmake  readme.md  zap_vim.cpp  zaps_vim.ahk
0/: keymap.cpp  keymap.h  zaps_vim.ahk
include/core/: key_handler.h  mode_manager.h  status_bar.h  ui_automation.h  window_manager.h
include/mode/: hint_mode.h  insert_mode.h  mode_base.h  mode_manager.h  normal_mode.h
include/utils/: config_loader.h
lib/: lib_caps.ahk
src/: debug.rs  indicator.rs  keyboard.rs  main.cpp  main.rs  mode.rs  tests.rs  window.rs
src/core/: key_handler.cpp  mode_manager.cpp  status_bar.cpp  ui_automation.cpp  window_manager.cpp
src/mode/: hint_mode.cpp  insert_mode.cpp  mode_manager.cpp  normal_mode.cpp
